script_load fix

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <br>Интервью с руководителем направления 'автоматика' группы 'РИМ'.<br><br>
 
         <div class='video_inner'>
-          <iframe width='640' height='360' src='http://www.youtube.com/embed/-P79vHi7VSo?feature=player_detailpage' frameborder='0' allowfullscreen></iframe>
+          <iframe width='640' height='360' src='https://www.youtube.com/embed/-P79vHi7VSo?feature=player_detailpage' frameborder='0' allowfullscreen></iframe>
         </div>
         <br>
         <br>
@@ -292,9 +292,9 @@ style="border:0;" height="31" width="88" alt="Рейтинг@Mail.ru" /></noscri
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
   <script src="js/main.js"></script>
 
-  <script type="text/javascript" src="/engine/lib/external/highslide/highslide-with-gallery.js"></script>
+  <script type="text/javascript" src="engine/lib/external/highslide/highslide-with-gallery.js"></script>
   <script type="text/javascript">
-    hs.graphicsDir = '/engine/lib/external/highslide/graphics/';
+    hs.graphicsDir = 'engine/lib/external/highslide/graphics/';
     hs.align = 'center';
     hs.transitions = ['expand', 'crossfade'];
     hs.wrapperClassName = 'dark borderless floating-caption';
