--- a/index.html
+++ b/index.html
@@ -10,9 +10,663 @@
   <meta name='format-detection' content='telephone=no'>
   <meta name='DESCRIPTION' content='Тест.' />
   <meta name='KEYWORDS' content='Тест' />
-
-  <link rel='stylesheet' type='text/css' href='templates/skin/new/css/style.css' />
   <link href='favicon.ico' rel='shortcut icon' />
+
+  <style>
+    a,
+    body,
+    div,
+    font,
+    form,
+    h1,
+    html,
+    img,
+    li,
+    p,
+    span,
+    table,
+    tbody,
+    td,
+    tr,
+    ul {
+      padding: 0;
+      margin: 0;
+    }
+
+    ul {
+      list-style: none;
+    }
+
+    img {
+      border: none;
+    }
+
+    body,
+    html {
+      height: 100%;
+      width: 100%;
+    }
+
+    body {
+      font: 12px/18px Tahoma, Arial, Helvetica, sans-serif;
+      color: #333;
+      background: #fff;
+    }
+
+    .zag,
+    h1 {
+      font: normal 18px Verdana;
+      color: #0978d1;
+    }
+
+    .zag,
+    h1 {
+      font-size: 23px;
+      line-height: 26px;
+      margin-bottom: 10px;
+    }
+
+    a {
+      color: #0978d1;
+    }
+
+    p {
+      text-align: justify;
+      font-size: 14px;
+      line-height: 20px;
+      margin-bottom: 14px;
+      font-family: Verdana, sans-serif;
+    }
+
+    #container {
+      width: 100%;
+      max-width: 1900px;
+      overflow: hidden;
+    }
+
+    #headerrim {
+      clear: both;
+      overflow: hidden;
+      zoom: 1;
+    }
+
+    #headerrim {
+      padding-left: 3%;
+      height: 265px;
+      background: url(../../../../img/fon.gif) repeat-x;
+    }
+
+    .logo {
+      padding-top: 8px;
+    }
+
+    #headerrim .logomenu {
+      width: 146px;
+    }
+
+    #headerrim .gruppa {
+      width: 146px;
+      text-align: center;
+      color: #333;
+      font-size: 10px;
+      margin-top: -5px;
+      height: 15px;
+    }
+
+    #headerrim .headermenu {
+      padding: 12px 0 0;
+      margin: 0;
+    }
+
+    #headerrim .menu {
+      width: 154px;
+      height: 25px;
+      background: url(../../../../img/menu1.gif) no-repeat 0 13px;
+      padding: 5px 0 0 20px;
+      color: #000;
+      text-decoration: none;
+    }
+
+    #headerrim .dom {
+      width: 619px;
+      height: 265px;
+      position: relative;
+      background: url(../../../../img/dom.gif) no-repeat;
+      font-size: 14px;
+    }
+
+    #headerrim .vorota {
+      width: 167px;
+      top: 68px;
+      left: 306px;
+    }
+
+    #headerrim .jaluzi,
+    #headerrim .vorota {
+      position: absolute;
+      color: #000;
+      text-decoration: none;
+      text-align: center;
+    }
+
+    #headerrim .jaluzi {
+      width: 117px;
+      top: 59px;
+      left: 41px;
+    }
+
+    #headerrim .rolstavni {
+      width: 107px;
+      top: 110px;
+      left: 20px;
+    }
+
+    #headerrim .avtomatika,
+    #headerrim .rolstavni {
+      position: absolute;
+      color: #000;
+      text-decoration: none;
+      text-align: center;
+    }
+
+    #headerrim .avtomatika {
+      width: 172px;
+      top: 218px;
+      left: 117px;
+    }
+
+    #headerrim .pokritiya {
+      position: absolute;
+      width: 148px;
+      top: 165px;
+      left: 463px;
+      color: #000;
+      text-decoration: none;
+      text-align: center;
+    }
+
+    #headerrim .okna {
+      position: absolute;
+      width: 70px;
+      top: 44px;
+      left: 227px;
+      color: #000;
+      text-decoration: none;
+      text-align: center;
+    }
+
+    #headerrim .zabor {
+      width: auto;
+      height: auto;
+      background: url(../../../../img/zabor.gif) repeat-x;
+    }
+
+    .social {
+      right: 40px;
+      background: url(../../../../img/phone.gif) no-repeat 0 2px;
+      font: 2.05em Arial, sans-serif;
+      font-size: 30px;
+    }
+
+    .social {
+      width: auto;
+      height: 35px;
+      position: absolute;
+      top: 8px;
+      padding-left: 28px;
+      color: #030303;
+    }
+
+    .social span {
+      color: #777;
+    }
+
+    #slayd {
+      padding-left: 3%;
+      width: 95%;
+      height: 140px;
+    }
+
+    #slayd .vorota {
+      background: url(../../../../img/slayd-vorota.gif) 50% no-repeat;
+    }
+
+    #slayd .jaluzi,
+    #slayd .vorota {
+      width: 19.9%;
+      height: 140px;
+      float: left;
+      text-decoration: none;
+      color: #097ad6;
+      font-size: 15px;
+    }
+
+    #slayd .jaluzi {
+      margin-left: 1px;
+      background: url(../../../../img/slayd-jaluzi.gif) 50% no-repeat;
+    }
+
+    #slayd .rolstavni {
+      background: url(../../../../img/slayd-rolstavni.gif) 50% no-repeat;
+    }
+
+    #slayd .avtomatika,
+    #slayd .rolstavni {
+      margin-left: 1px;
+      width: 19.9%;
+      height: 140px;
+      float: left;
+      text-decoration: none;
+      color: #097ad6;
+      font-size: 15px;
+    }
+
+    #slayd .avtomatika {
+      background: url(../../../../img/slayd-avtomatika.gif) 50% no-repeat;
+    }
+
+    #slayd .pokritiya {
+      margin-left: 1px;
+      width: 19.9%;
+      height: 140px;
+      float: left;
+      background: url(../../../../img/slayd-pokritiya.gif) 50% no-repeat;
+      text-decoration: none;
+      color: #097ad6;
+      font-size: 15px;
+    }
+
+    #slayd .text {
+      text-align: center;
+      padding-top: 105px;
+    }
+
+    #slayd2 {
+      width: 100%;
+      margin-bottom: 20px;
+    }
+
+    #slayd2 img {
+      width: 24%;
+      max-height: 280px;
+      opacity: .6;
+    }
+
+    #content-vn {
+      padding-left: 3%;
+      width: 95%;
+      margin-top: 10px;
+    }
+
+    #content-vn .menu {
+      width: 240px;
+      float: left;
+      margin: 0;
+      padding: 0;
+    }
+
+    #content-vn .content {
+      margin-left: 300px;
+      width: auto;
+    }
+
+    #content-vn .katalogmenu {
+      padding: 0;
+      margin: 0;
+      color: #000;
+    }
+
+    #content-vn .katalogmenu li {
+      width: 100%;
+      background: url(../../../../img/menu2.gif) no-repeat 100% 100%;
+      color: #000;
+    }
+
+    #content-vn .katalogmenu li a {
+      font-size: 17px;
+      line-height: 21px;
+      color: #000;
+      text-decoration: none;
+    }
+
+    #content-vn .katalogmenu li .sub {
+      width: 100%;
+      padding-left: 10px;
+      color: #555;
+    }
+
+    #content-vn .katalogmenu li .sub a {
+      font-size: 14px;
+      line-height: 21px;
+      color: #555;
+      text-decoration: none;
+    }
+
+    .menu {
+      float: left;
+      font-size: 15px;
+      padding: 2px 0 0 37px;
+    }
+
+    .menu li {
+      float: left;
+      color: #51b038;
+      padding: 5px 10px 8px;
+    }
+
+    .menu li a {
+      text-decoration: none;
+      color: #838383;
+    }
+
+    .search {
+      width: 100%;
+      margin: 2px 0 7px;
+      overflow: hidden;
+    }
+
+    .search .se1 {
+      margin: 0;
+      padding: 0;
+      margin-right: 77px;
+    }
+
+    .search .se2 {
+      width: 68px;
+      float: right;
+    }
+
+    .search form {
+      width: 100%;
+      overflow: hidden;
+    }
+
+    .search .text {
+      width: 98%;
+      height: 21px;
+      padding: 0 0 0 5px;
+    }
+
+    .search .search-submit,
+    .search .text {
+      margin: 0;
+      border: 1px solid #777;
+      color: #555;
+    }
+
+    .search .search-submit {
+      float: right;
+      height: 23px;
+      width: 68px;
+      padding: 0;
+    }
+
+    .anons {
+      float: left;
+      width: 25%;
+      text-align: center;
+      color: #111;
+      margin: 0 0 15px;
+    }
+
+    .anons a {
+      max-width: 100%;
+      color: #d00000;
+      font-size: 16px;
+      line-height: 20px;
+    }
+
+    .promo {
+      width: 100%;
+    }
+
+    .promo a {
+      text-decoration: none;
+      width: 99.8%;
+      border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      -khtml-border-radius: 5px;
+      border: 1px solid #d20b16;
+      background: url(../../../../img/fon_act.jpg) repeat-x;
+      background-size: cover;
+      color: #d20b16;
+      text-align: center;
+      font-size: 33px;
+      line-height: 33px;
+      padding: 20px 0;
+      display: block;
+      margin: 0 0 20px;
+    }
+
+    .anons_wrap {
+      display: -ms-flexbox;
+      display: flex;
+    }
+
+    .header__menu-list,
+    .header__menu-row {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+      -ms-flex-pack: end;
+      justify-content: flex-end;
+      -ms-flex-line-pack: start;
+      align-content: flex-start;
+      -ms-flex-align: center;
+      align-items: center;
+    }
+
+    .header__menu-row {
+      will-change: transform;
+    }
+
+    .menu__trigger-wrap {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 5rem;
+    }
+
+    .menu__trigger {
+      z-index: 3;
+      position: absolute;
+      top: 50%;
+      right: 1rem;
+      display: none;
+      height: 3rem;
+      width: 3rem;
+      margin-top: -1.6rem;
+      text-transform: uppercase;
+      color: transparent;
+    }
+
+    .menu__trigger:before {
+      -webkit-transform: translateY(-1rem);
+      transform: translateY(-1rem);
+    }
+
+    .menu__trigger:after,
+    .menu__trigger:before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 0;
+      width: 100%;
+      height: .4rem;
+      margin-top: -.2rem;
+      background: #82a509;
+    }
+
+    .menu__trigger:after {
+      -webkit-transform: translateY(1rem);
+      transform: translateY(1rem);
+    }
+
+    .menu__trigger-decor {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      width: 100%;
+      height: .4rem;
+      margin-top: -.2rem;
+      background: #82a509;
+    }
+
+    .header__menu-row {
+      z-index: 2;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 8rem;
+      display: none;
+      padding: 0;
+    }
+
+    .header__menu-item {
+      padding: 0 0 0 3rem;
+    }
+
+    .header__menu-item:first-child {
+      padding: 0;
+    }
+
+    .header__menu-link {
+      text-decoration: none;
+      font-size: 15px;
+    }
+
+    @media (max-width:960px) {
+      .anons_wrap {
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+      }
+      .anons {
+        -ms-flex: 0 1 50%;
+        flex: 0 1 50%;
+      }
+    }
+
+    @media (max-width:860px) {
+      #slayd {
+        padding: 0 3%;
+        width: 95%;
+        height: auto;
+        -ms-flex-direction: column;
+        flex-direction: column;
+      }
+      #slayd,
+      #slayd>a {
+        display: -ms-flexbox;
+        display: flex;
+      }
+      #slayd>a {
+        width: 100%!important;
+        height: 60px!important;
+        text-decoration: none;
+        color: #097ad6;
+        font-size: 18px;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -ms-flex-align: center;
+        align-items: center;
+        margin-bottom: 10px;
+        background: #b0b4ae!important;
+        background: linear-gradient(90deg, #b0b4ae 0, #d7dad4 60%, #f5f7ef)!important;
+        filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#b0b4ae', endColorstr='#f5f7ef', GradientType=1)!important;
+      }
+      #slayd .text {
+        padding: 5px 10px;
+      }
+      #content-vn .menu {
+        display: none;
+      }
+      #content-vn .content {
+        margin-left: 0;
+        width: 100%;
+      }
+    }
+
+    @media (max-width:820px) {
+      #headerrim table td:first-child {
+        width: 100%!important;
+      }
+      #headerrim table td:last-child,
+      #headerrim table td:nth-last-child(2) {
+        display: none!important;
+      }
+      #headerrim .logomenu {
+        width: 100%;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+        -ms-flex-align: center;
+        align-items: center;
+      }
+      .social {
+        top: 70px;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        width: 288px;
+      }
+      #headerrim .headermenu {
+        padding: 40px 0 0;
+      }
+      .menu__trigger {
+        display: block;
+      }
+      .header__menu-item {
+        padding: 2rem 0 0;
+      }
+      .header__menu-row {
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -ms-flex-line-pack: start;
+        align-content: flex-start;
+        -ms-flex-align: center;
+        align-items: center;
+        height: 100%;
+        background: #fff;
+        -webkit-transform: translateY(-100%);
+        transform: translateY(-100%);
+      }
+      .header__menu-list {
+        -ms-flex-direction: column;
+        flex-direction: column;
+      }
+    }
+
+    @media (max-width:480px) {
+      .anons_wrap {
+        -ms-flex-direction: column;
+        flex-direction: column;
+      }
+      .anons {
+        width: 100%;
+        -ms-flex: auto;
+        flex: auto;
+      }
+      #slayd2 img {
+        width: 23%;
+      }
+    }
+  </style>
+
 </head>
 
 <BODY>
@@ -289,10 +943,11 @@ style="border:0;" height="31" width="88" alt="Рейтинг@Mail.ru" /></noscri
     </div>
   </div>
 
+  <link rel='stylesheet' type='text/css' href='templates/skin/new/css/style.min.css' />
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
   <script src="js/main.js"></script>
-
-  <script type="text/javascript" src="engine/lib/external/highslide/highslide-with-gallery.js"></script>
+  <script type="text/javascript" src="engine/lib/external/highslide/highslide-with-gallery.min.js"></script>
   <script type="text/javascript">
     hs.graphicsDir = 'engine/lib/external/highslide/graphics/';
     hs.align = 'center';
