--- a/index.html
+++ b/index.html
@@ -674,16 +674,16 @@
   <div id='container'>
     <div id='headerrim'>
 
-      <table border='0' width='100%' cellspacing='0' cellpadding='0'>
+      <table width="100%">
         <tr>
-          <td width='155'>
+          <td width="155">
             <div class='logomenu'>
-              <a href='index.html'><img class='logo' src='img/logo.gif' title='Компания РИМ'></a>
+              <a href='index.html'><img class='logo' src='img/logo.gif' title='Компания РИМ' alt='Компания РИМ'></a>
               <div class='gruppa'>эксперт по воротам</div>
               <ul class='headermenu'>
                 <li>
                   <a class='menu' href='shop/index.html'>
-                    <font color='D00000'>Интернет-магазин</font>
+                    <span>Интернет-магазин</span>
                   </a>
                 </li>
                 <li><a class='menu' href='allproducts.html'>Вся продукция</a></li>
@@ -694,7 +694,7 @@
             </div>
           </td>
           <td>&nbsp;</td>
-          <td width='619'>
+          <td width="619">
             <div class='dom'>
               <a class='vorota'>Автоматические ворота</a><a class='jaluzi' href='jaluzi.html'>Жалюзи и шторы</a><a class='rolstavni' href='rolstavni.html'>Рольставни</a><a class='avtomatika' href='avtomatika-i-shlagbaumy.html'>Автоматика и шлагбаумы</a>
               <a class='pokritiya' href='napolnye-pokrytiya.html'>Напольные покрытия</a><a class='okna' href='landing/okna/index.html'>Окна</a>
@@ -764,7 +764,7 @@
         <div class='search'>
           <form action='http://www.imperia-rim.ru/search/topics/' method='GET'>
             <div class='se2'><input class='search-submit' type='submit' value='Найти' /></div>
-            <div class='se1'><input class='text' type='text' onblur='if (!value) value=defaultValue' onclick='if (value==defaultValue) value=' '' value='Поиск по сайту' name='q' /></div>
+            <div class='se1'><input class='text' type='text' onblur='if (!value) value=defaultValue' onclick='if (value==defaultValue)' value='Поиск по сайту' name='q'></div>
           </form>
         </div>
 
@@ -788,7 +788,7 @@
             <div class='sub'>- <a href='voprosy-i-otvety-pro-vorota.html'>Вопросы и ответы</a></div>
             <div class='sub'>-
               <a href='ordere964.html?buy=vorota'>
-                <font color='red'>Оставить заявку</font>
+                <span color='red'>Оставить заявку</span>
               </a>
             </div>
           </li>
@@ -819,10 +819,10 @@
       <div class='content'>
 
         <div id='slayd2'>
-          <a href='rasschitat-stoimost.html'><img src='img/calc_vorot.gif' title='Рассчитать стоимость'></a>
-          <a href='personalnaya-skidka-na-vorota-i-rolstavni.html'><img src='img/skidka.gif' title='ПЕРСОНАЛЬНАЯ СКИДКА лично для Вас'></a>
-          <a href='besplatnyy-zamer-pochemu-eto-vygodno.html'><img src='img/zamer.gif' title='Профессиональный БЕСПЛАТНЫЙ замер'></a>
-          <a href='nashi-preimuschestva.html' title='Наши преимущества'><img src='img/preim.gif' title='Наши преимущества'></a>
+          <a href='rasschitat-stoimost.html'><img src='img/calc_vorot.gif' title='Рассчитать стоимость' alt='изображение'></a>
+          <a href='personalnaya-skidka-na-vorota-i-rolstavni.html'><img src='img/skidka.gif' title='ПЕРСОНАЛЬНАЯ СКИДКА лично для Вас' alt='изображение'></a>
+          <a href='besplatnyy-zamer-pochemu-eto-vygodno.html'><img src='img/zamer.gif' title='Профессиональный БЕСПЛАТНЫЙ замер' alt='изображение'></a>
+          <a href='nashi-preimuschestva.html' title='Наши преимущества'><img src='img/preim.gif' title='Наши преимущества' alt='изображение'></a>
         </div>
 
         <div class='promo'><a href='hotite-vorota-v-rassrochku-pozhaluysta-.html'>ХОТИТЕ ВОРОТА В РАССРОЧКУ? -  ПОЖАЛУЙСТА! :-)</a></div>
@@ -833,15 +833,15 @@
           относятся секционные (самые распространенные), промышленные, рольворота, распашные, откатные и противопожарные ворота. Каждый из этих видов имеет как свои достоинства, так и недостатки.</p>
 
         <div class="anons_wrap">
-          <div class='anons'><a href='sekcionnye-garazhnye-vorota-v-samare.html'>Секционные ворота<br><img src='img/av1.jpg' ></a></div>
-          <div class='anons'><a href='otkatnye-vorota.html'>Откатные ворота<br><img src='img/av2.jpg' ></a></div>
-          <div class='anons'><a href='raspashnie.html'>Распашные ворота<br><img src='img/av3.jpg' ></a></div>
-          <div class='anons'><a href='rolvorota-rulonnye-vorota.html'>Рольворота<br><img src='img/av4.jpg' ></a></div>
+          <div class='anons'><a href='sekcionnye-garazhnye-vorota-v-samare.html'>Секционные ворота<br><img src='img/av1.jpg' alt='изображение'></a></div>
+          <div class='anons'><a href='otkatnye-vorota.html'>Откатные ворота<br><img src='img/av2.jpg' alt='изображение'></a></div>
+          <div class='anons'><a href='raspashnie.html'>Распашные ворота<br><img src='img/av3.jpg' alt='изображение'></a></div>
+          <div class='anons'><a href='rolvorota-rulonnye-vorota.html'>Рольворота<br><img src='img/av4.jpg' alt='изображение'></a></div>
         </div>
 
         <p>Для перекрытия въезда на территорию применяют откатные или распашные ворота, которые не ограничивают проезд на территорию техники любых габаритов, как по высоте, так и по ширине проема.</p>
 
-        <a class='highslide' onclick='return hs.expand(this)' href='img/avtomaticheskievorota.jpg'><img src='img/avtomaticheskievorota.jpg'></a>
+        <a class='highslide' onclick='return hs.expand(this)' href='img/avtomaticheskievorota.jpg'><img src='img/avtomaticheskievorota.jpg' alt='изображение'></a>
 
         <p>Расчитать стоимость, оформить заказ и купить ворота Вы можете у нас. Для гаража больше подходят секционные или рольворота. И первые, и вторые не занимают полезное пространство внутри гаража и очень просты в повседневной эксплуатации. Они даже
           не требуют ежедневной уборки снега перед гаражом, так как открываются вверх.</p>
@@ -851,16 +851,16 @@
         <h2>Применение ворот с автоматикой для дома и гаража</h2>
 
         <p class="highimg">
-          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert14.jpg"><img src="img/cert14.jpg" height=150></a>
-          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert11.jpg"><img src="img/cert11.jpg" height=150></a><br>
-          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert10.jpg"><img src="img/cert10.jpg" height=150></a>
-          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert9.jpg"><img src="img/cert9.jpg" height=150></a><br>
-          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert6.jpg"><img src="img/cert6.jpg" height=150></a>
-          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert5.jpg"><img src="img/cert5.jpg" height=150></a><br>
-          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert1.jpg"><img src="img/cert.gif" height=150></a>
-          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert2.jpg"><img src="img/cert2.jpg" height=150></a><br>
-          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert3.jpg"><img src="img/cert3.jpg" height=150></a>
-          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert4.jpg"><img src="img/cert4.jpg" height=150></a><br>
+          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert14.jpg"><img src="img/cert14.jpg" height=150 alt='изображение'></a>
+          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert11.jpg"><img src="img/cert11.jpg" height=150 alt='изображение'></a><br>
+          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert10.jpg"><img src="img/cert10.jpg" height=150 alt='изображение'></a>
+          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert9.jpg"><img src="img/cert9.jpg" height=150 alt='изображение'></a><br>
+          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert6.jpg"><img src="img/cert6.jpg" height=150 alt='изображение'></a>
+          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert5.jpg"><img src="img/cert5.jpg" height=150 alt='изображение'></a><br>
+          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert1.jpg"><img src="img/cert.gif" height=150 alt='изображение'></a>
+          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert2.jpg"><img src="img/cert2.jpg" height=150 alt='изображение'></a><br>
+          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert3.jpg"><img src="img/cert3.jpg" height=150 alt='изображение'></a>
+          <a class="highslide" onclick="return hs.expand(this)" style="float:none;" href="img/cert4.jpg"><img src="img/cert4.jpg" height=150 alt='изображение'></a><br>
         </p>
 
         <p>Автоматически открываемые входные двери давно перешли из разряда предметов роскоши в сегмент массового потребления. Благодаря постоянным усовершенствованиям, цена на них стала доступной каждому. Сегодня их устанавливают в поселках и на дачных
@@ -887,19 +887,19 @@
         <br>Интервью с руководителем направления 'автоматика' группы 'РИМ'.<br><br>
 
         <div class='video_inner'>
-          <iframe width='640' height='360' src='https://www.youtube.com/embed/-P79vHi7VSo?feature=player_detailpage' frameborder='0' allowfullscreen></iframe>
+          <iframe width='640' height='360' src='https://www.youtube.com/embed/-P79vHi7VSo?feature=player_detailpage' allowfullscreen></iframe>
         </div>
         <br>
         <br>
-        <center>
+        <p>
           Компания 'РиМ' - официальный представитель в Самаре ведущих производителей ворот, рольставень и комплектующих:
           <br>
           <br>
-          <a class='banner_inner' rel='nofollow' target=_blanc href='http://www.hoermann.ru/aktion2015/ru_ha'>
-            <IMG alt='Херманн' src='img/banner-hermann.gif' border=0>
+          <a class='banner_inner' rel='nofollow' href='http://www.hoermann.ru/aktion2015/ru_ha' target='_blank'>
+            <IMG alt='Херманн' src='img/banner-hermann.gif'>
           </a>
-          <IMG alt='Алютех' src='img/aluteh.png' height=70 border=0>
-        </center>
+          <IMG alt='Алютех' src='img/aluteh.png' height=70>
+        </p>
 
       </div>
     </div>
@@ -919,12 +919,12 @@
 <a href='/jaluzi.php'>Жалюзи в Самаре</a> |
 <a href='/rolstavni.php'>Рольставни в Самаре</a>-->
 
-    <br><img src='img/visa.gif' title='Visa' style='margin-top:5px;' align='middle'> <img src='img/mastercard.gif' title='MasterCard' style='margin-top:5px;' align='middle'> - принимаем к оплате.
+    <br><img src='img/visa.gif' title='Visa' style='margin-top:5px;' alt='visa'> <img src='img/mastercard.gif' title='MasterCard' style='margin-top:5px;' alt='card'> - принимаем к оплате.
 
     <div class='footer_social'>
-      <a rel=nofollow href='http://vk.com/imperia_rim' target=_blanc><img class='soc' src='img/vkontakte.gif' title='ВКонтакте' style='margin-top:5px;' align='middle'></a>
-      <a rel=nofollow href='https://twitter.com/vorota_jaluzi' target=_blanc><img class='soc' src='img/twitter.gif' title='Twitter' style='margin-top:5px;' align='middle'></a>
-      <a rel=nofollow href='http://ok.ru/profile/494584775212' target='_blanc'><img class='soc' src='img/odnoklassniki.png' title='Одноклассники' style='margin-top:5px;' align='middle'></a> - мы в соц.сетях.
+      <a rel=nofollow href='http://vk.com/imperia_rim' target="_blank"><img class='soc' src='img/vkontakte.gif' title='ВКонтакте' style='margin-top:5px;' alt='изображение'></a>
+      <a rel=nofollow href='https://twitter.com/vorota_jaluzi' target="_blank"><img class='soc' src='img/twitter.gif' title='Twitter' style='margin-top:5px;' alt='изображение'></a>
+      <a rel=nofollow href='http://ok.ru/profile/494584775212' target="_blank"><img class='soc' src='img/odnoklassniki.png' title='Одноклассники' style='margin-top:5px;' alt='изображение'></a> - мы в соц.сетях.
     </div>
 
     <div class="right">
