--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
       overflow: hidden;
       zoom: 1;
       padding-left: 3%;
-      height: 265px;
-      background: url(../../../../img/fon.gif) repeat-x;
+      background: url(img/fon.gif) repeat-x;
     }
 
     #headerrim table {width: 100%;}
@@ -122,7 +121,7 @@
     #headerrim .menu {
       width: 154px;
       height: 25px;
-      background: url(../../../../img/menu1.gif) no-repeat 0 13px;
+      background: url(img/menu1.gif) no-repeat 0 13px;
       padding: 5px 0 0 20px;
       color: #000;
       text-decoration: none;
@@ -132,7 +131,7 @@
       width: 619px;
       height: 265px;
       position: relative;
-      background: url(../../../../img/dom.gif) no-repeat;
+      background: url(img/dom.gif) no-repeat;
       font-size: 14px;
     }
 
@@ -199,12 +198,12 @@
     #headerrim .zabor {
       width: auto;
       height: auto;
-      background: url(../../../../img/zabor.gif) repeat-x;
+      background: url(img/zabor.gif) repeat-x;
     }
 
     .social {
       right: 40px;
-      background: url(../../../../img/phone.gif) no-repeat 0 2px;
+      background: url(img/phone.gif) no-repeat 0 2px;
       font: 2.05em Arial, sans-serif;
       font-size: 30px;
     }
@@ -229,7 +228,7 @@
     }
 
     #slayd .vorota {
-      background: url(../../../../img/slayd-vorota.gif) 50% no-repeat;
+      background: url(img/slayd-vorota.gif) 50% no-repeat;
     }
 
     #slayd .jaluzi,
@@ -244,11 +243,11 @@
 
     #slayd .jaluzi {
       margin-left: 1px;
-      background: url(../../../../img/slayd-jaluzi.gif) 50% no-repeat;
+      background: url(img/slayd-jaluzi.gif) 50% no-repeat;
     }
 
     #slayd .rolstavni {
-      background: url(../../../../img/slayd-rolstavni.gif) 50% no-repeat;
+      background: url(img/slayd-rolstavni.gif) 50% no-repeat;
     }
 
     #slayd .avtomatika,
@@ -263,7 +262,7 @@
     }
 
     #slayd .avtomatika {
-      background: url(../../../../img/slayd-avtomatika.gif) 50% no-repeat;
+      background: url(img/slayd-avtomatika.gif) 50% no-repeat;
     }
 
     #slayd .pokritiya {
@@ -271,7 +270,7 @@
       width: 19.9%;
       height: 140px;
       float: left;
-      background: url(../../../../img/slayd-pokritiya.gif) 50% no-repeat;
+      background: url(img/slayd-pokritiya.gif) 50% no-repeat;
       text-decoration: none;
       color: #097ad6;
       font-size: 15px;
@@ -319,7 +318,7 @@
 
     #content-vn .katalogmenu li {
       width: 100%;
-      background: url(../../../../img/menu2.gif) no-repeat 100% 100%;
+      background: url(img/menu2.gif) no-repeat 100% 100%;
       color: #000;
     }
 
@@ -431,7 +430,7 @@
       -moz-border-radius: 5px;
       -khtml-border-radius: 5px;
       border: 1px solid #d20b16;
-      background: url(../../../../img/fon_act.jpg) repeat-x;
+      background: url(img/fon_act.jpg) repeat-x;
       background-size: cover;
       color: #d20b16;
       text-align: center;
